# imageformatdetector

./: CMakeLists.txt  README.md
include/: detector.hpp  format.hpp  image.hpp
src/: CMakeLists.txt  detector.cpp  image.cpp  main.cpp
