#Directory Ora

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(PROJECT_NAME "ImageTypeDetector")
PROJECT(${PROJECT_NAME})


# Definitions and includes
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(SRC ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include)

# C++ Source Code
ADD_SUBDIRECTORY(src)

install(DIRECTORY include DESTINATION .)
