#Directory Ora

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET(PROJECT_NAME "ImageTypeDetector")
PROJECT(${PROJECT_NAME})

IF(UNIX)
	INCLUDE(CheckCXXCompilerFlag)
	CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
	CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
	if(COMPILER_SUPPORTS_CXX11)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	ELSEIF(COMPILER_SUPPORTS_CXX0X)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
	ELSE()
		MESSAGE(STATUS "The Compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use one that supports C++11.")
	ENDIF()
ENDIF()

# Definitions and includes
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(SRC ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(HEADER ${CMAKE_CURRENT_SOURCE_DIR}/include)

# C++ Source Code
ADD_SUBDIRECTORY(src)

install(DIRECTORY include DESTINATION .)
